# professorpeter

./: API_SETUP.md  INTEGRATION_README.md  README.md  start-dev.sh
backend/: .env.example  .gitignore  README.md  audio.py  config.py  env.example  main.py  models.py  pyproject.toml  requirements.txt  script.py  setup.py  start.py  subtitles.py  video_compiler.py
client/: package-lock.json  package.json  tailwind.config.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/about/: page.tsx
client/src/app/help/: page.tsx
client/src/components/: HeroSection.tsx  Navbar.tsx  Tempelates.tsx  TemplateSelector.tsx  VideoGenerator.tsx  VideoResult.tsx  footer.tsx
client/src/components/ui/: ResizableNavbar.tsx
client/src/lib/: api.ts
